--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
 @import './reset';
 @import './components/LandingPage';
 @import './components/Home';
+@import './components/PropertySearch';
+@import './components/PropertyWizard';
