--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -32,45 +32,25 @@
         .property-controls {
             width: 30%;
             border: 1px solid white;
-            padding: 1rem;
             height: 100%;
-            .search {
-                h4,
-                h5 {
+            .controls-menu{
+                display: flex;
+                height: 12%;
+                .menu-tab{
                     color: #fff;
-                    text-align: center;
-                }
-                h4 {
-                    text-align: center;
-                    font-size: 1.5rem;
-                }
-                h5 {
-                    margin-bottom: 0.5rem;
-                    font-size: 1.2rem;
-                }
-                .search-filter {
-                    .filter {
-                        text-align: center;
-                        margin-top: 1rem;
-                        select {
-                            width: 100%;
-                            padding: 8px;
-                        }
-                    }
-                }
-                .search-button {
+                    font-size: 1.35rem;
+                    border: 1px solid $btn-grey;
+                    height: 100%;
+                    width: 100%;
                     display: flex;
                     justify-content: center;
-                    button {
-                        width: 75%;
-                        margin-top: 1.5rem;
-                        padding: 5px 0;
-                        text-align: center;
-                        padding: 10px 0;
-                        border-radius: 5px;
-                        border: none;
-                        font-size: 1.25rem;
+                    align-items: center;
+                    &:hover{
+                        cursor: pointer;
                     }
+                }
+                .active{
+                   background-color: #2E6B8D;
                 }
             }
         }
