wizard is working and switching between views

--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -2,51 +2,53 @@
     width: 85%;
     margin: 0 auto;
     height: 100%;
-    .wizard-steps{
+    .wizard-step-title {
+        text-align: center;
+        color: #fff;
+        text-align: center;
+        font-size: 1.5rem;
+        margin: 2rem 0 1rem 0;
+    }
+    .input-group:nth-child(1n+2) {
+        margin-top: 5%;
+    }
+    .input-group {
+        h6 {
+            color: #fff;
+            font-size: 1.25rem;
+            margin-bottom: 1%;
+        }
+        input {
+            width: 100%;
+            border-radius: 5px;
+            border: none;
+            padding: 8px 3px;
+        }
+    }
+    .wizard-steps {
         height: 8%;
         margin-top: 2rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
         color: #fff;
-        .hr{
-            width: 25%;
-            border: 1px solid green;
+        .active {
+            background-color: #09814A;
         }
-        .icon-container{
-            border: 2px solid blue;
+        .hr {
+            width: 25%;
+            border: 1px solid #99A2B2;
+        }
+        .icon-container {
+            border: 2px solid #99A2B2;
             height: 130%;
             width: 20%;
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            i{
+            i {
                 font-size: 1.5rem;
-            }
-        }
-    }
-    .property-img {
-        h4 {
-            text-align: center;
-            color: #fff;
-            text-align: center;
-            font-size: 1.5rem;
-            margin: 1rem;
-        }
-        .dropzone {
-            height: 35vh;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            border: 1px dashed lightgray;
-            &:hover {
-                cursor: pointer;
-            }
-            p {
-                text-align: center;
-                color: #99A2B2;
-                font-size: 1.25rem;
             }
         }
     }
@@ -65,6 +67,25 @@
             border-radius: 5px;
             &:hover {
                 cursor: pointer;
+            }
+        }
+    }
+    .step3 {
+        .property-img {
+            .dropzone {
+                height: 35vh;
+                margin: 0 auto;
+                display: flex;
+                align-items: center;
+                border: 1px dashed lightgray;
+                &:hover {
+                    cursor: pointer;
+                }
+                p {
+                    text-align: center;
+                    color: #99A2B2;
+                    font-size: 1.25rem;
+                }
             }
         }
     }
