--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -1,13 +1,13 @@
 .component-property-wizard {
     width: 85%;
     margin: 0 auto;
-    height: 100%;
+    height: 85%;
     .wizard-step-title {
         text-align: center;
         color: #fff;
         text-align: center;
         font-size: 1.5rem;
-        margin: 2rem 0 1rem 0;
+        margin: 1.5rem 0 0.75rem 0;
     }
     .input-group:nth-child(1n+2) {
         margin-top: 5%;
@@ -26,7 +26,7 @@
         }
     }
     .wizard-steps {
-        height: 8%;
+        height: 10%;
         margin-top: 2rem;
         display: flex;
         align-items: center;
@@ -36,13 +36,13 @@
             background-color: #09814A;
         }
         .hr {
-            width: 25%;
+            width:10%;
             border: 1px solid #99A2B2;
         }
         .icon-container {
             border: 2px solid #99A2B2;
-            height: 130%;
-            width: 20%;
+            height: 110%;
+            width: 30%;
             border-radius: 50%;
             display: flex;
             justify-content: center;
@@ -70,7 +70,16 @@
             }
         }
     }
-    .step3 {
+    .step3{
+        p{
+            color: #fff;
+            text-align: center;
+            font-size: 0.8rem;
+            position: relative;
+            bottom: 8px;
+        }
+    }
+    .step4{
         .property-img {
             .dropzone {
                 height: 35vh;
