--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -1,13 +1,14 @@
 .component-property-wizard {
-    width: 85%;
-    margin: 0 auto;
-    height: 85%;
+    height: 88%;
+    padding: 2vh 0 4vh 0;
+    overflow-y: auto;
+    overflow-x: hidden;
     .wizard-step-title {
         text-align: center;
         color: #fff;
         text-align: center;
         font-size: 1.5rem;
-        margin: 1.5rem 0 0.75rem 0;
+        margin: 1rem 0 0.5rem 0;
     }
     .input-group:nth-child(1n+2) {
         margin-top: 5%;
@@ -27,7 +28,8 @@
     }
     .wizard-steps {
         height: 10%;
-        margin-top: 1.25rem;
+        width: 90%;
+        margin: 0 auto;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -55,6 +57,8 @@
     .wizard-controls {
         display: flex;
         justify-content: center;
+        width: 90%;
+        margin: 0 auto;
         margin-top: 7%;
         button:nth-child(2) {
             margin-left: 20%;
@@ -70,6 +74,10 @@
             }
         }
     }
+    .step1, .step2, .step3 {
+        width: 90%;
+        margin: 0 auto;
+    }
     .step3 {
         p {
             color: #fff;
@@ -80,6 +88,8 @@
         }
     }
     .step4 {
+        width: 90%;
+        margin: 0 auto;
         .property-img {
             .property-img-content {
                 position: relative;
@@ -96,11 +106,11 @@
                     button {
                         padding: 5px 10px;
                         border: none;
-                        &:hover{
+                        &:hover {
                             cursor: pointer;
                             color: red;
                         }
-                        i{
+                        i {
                             font-size: 1.25rem;
                             color: inherit;
                         }
@@ -120,6 +130,37 @@
                     text-align: center;
                     color: #99A2B2;
                     font-size: 1.25rem;
+                }
+            }
+        }
+    }
+    .step5 {
+        width: 90%;
+        margin: 0 auto;
+        .property-img {
+            height: 30vh;
+            width: 100%;
+            margin: 5% 0;
+            img {
+                height: 100%;
+                width: auto;
+            }
+        }
+        .property-section {
+            border-top: 1px solid #99A2B2;
+            border-bottom: 1px solid #99A2B2;
+            padding: 0.5rem 0;
+            h6 {
+                color: #fff;
+                font-size: 1.15rem;
+                text-align: center;
+                margin-bottom: 0.5rem;
+            }
+            .property-content {
+                p {
+                    color: #fff;
+                    
+                    margin-bottom: 0.5rem;
                 }
             }
         }
