property css template

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,5 @@
 @import './components/Home';
 @import './components/PropertySearch';
 @import './components/PropertyWizard';
+@import './components/JobsView';
+@import './components/Transactions';
