--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -2,7 +2,7 @@
     background-color: #344055;
     height: 100vh;
     .nav {
-        display: flex;
+        align-items: center;
         background-color: $btn-blue;
         align-items: center;
         padding: 1rem;
@@ -33,10 +33,10 @@
             width: 30%;
             border: 1px solid white;
             height: 100%;
-            .controls-menu{
+            .controls-menu {
                 display: flex;
                 height: 12%;
-                .menu-tab{
+                .menu-tab {
                     color: #fff;
                     font-size: 1.35rem;
                     border: 1px solid $btn-grey;
@@ -45,33 +45,98 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    &:hover{
+                    &:hover {
                         cursor: pointer;
                     }
                 }
-                .active{
-                   background-color: #2E6B8D;
+                .active {
+                    background-color: #2E6B8D;
                 }
             }
         }
-        .property-list{
+        .property-list-container {
             width: 70%;
             height: 100%;
             border: 1px solid red;
-            .property-header{
+            .property-header {
                 height: 12%;
                 border: 1px solid green;
                 padding: 0 1rem;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                h3{
+                h3 {
                     color: #fff;
                     font-size: 2rem;
                 }
-                h6{
+                h6 {
                     color: #fff;
                     font-size: 1rem;
+                }
+            }
+            .property-list {
+                padding-top: 1rem;
+                
+                color: #fff;
+                .property {
+                    height: 27vh;
+                    border: 1px solid green;
+                    width: 95%;
+                    margin: 0 auto;
+                    display: flex;
+                }
+                .property-img {
+                    height: 100%;
+                    width: 25%;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                    border: 1px solid orange;
+                }
+                .property-details {
+                    display: flex;
+                    width: 75%;
+                    h5 {
+                        text-align: center;
+                        font-size: 1.25rem;
+                    }
+                    p {
+                        margin-top: 0.35rem;
+                        font-size: 1.1rem;
+                    }
+                    & > div{
+                        padding: 0.75rem;
+                        border: 1px solid $btn-grey;
+                    }
+                    .property-address {
+                        width: 32%;
+                    }
+                    .property-rent {
+                        width: 20%;
+                    }
+                    .property-tenants {
+                        width: 40%;
+                    }
+                    .property-actions {
+                        border: 1px solid $btn-grey;;
+                        width: 8%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        .action{
+                            &:hover{
+                                cursor: pointer;
+                            }
+                            i{
+                                font-size: 1.5rem;
+                            }
+                        }
+                        .action:first-child{
+                            margin-bottom: 2rem;
+                        }
+                    }
                 }
             }
         }
