--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -381,7 +381,7 @@ template {
   background-color: #344055;
   height: 100vh; }
   .component-home .nav {
-    display: flex;
+    align-items: center;
     background-color: #0786FC;
     align-items: center;
     padding: 1rem;
@@ -421,23 +421,70 @@ template {
             cursor: pointer; }
         .component-home .property-view .property-controls .controls-menu .active {
           background-color: #2E6B8D; }
-    .component-home .property-view .property-list {
+    .component-home .property-view .property-list-container {
       width: 70%;
       height: 100%;
       border: 1px solid red; }
-      .component-home .property-view .property-list .property-header {
+      .component-home .property-view .property-list-container .property-header {
         height: 12%;
         border: 1px solid green;
         padding: 0 1rem;
         display: flex;
         justify-content: space-between;
         align-items: center; }
-        .component-home .property-view .property-list .property-header h3 {
+        .component-home .property-view .property-list-container .property-header h3 {
           color: #fff;
           font-size: 2rem; }
-        .component-home .property-view .property-list .property-header h6 {
+        .component-home .property-view .property-list-container .property-header h6 {
           color: #fff;
           font-size: 1rem; }
+      .component-home .property-view .property-list-container .property-list {
+        padding-top: 1rem;
+        color: #fff; }
+        .component-home .property-view .property-list-container .property-list .property {
+          height: 27vh;
+          border: 1px solid green;
+          width: 95%;
+          margin: 0 auto;
+          display: flex; }
+        .component-home .property-view .property-list-container .property-list .property-img {
+          height: 100%;
+          width: 25%;
+          border: 1px solid orange; }
+          .component-home .property-view .property-list-container .property-list .property-img img {
+            width: 100%;
+            height: 100%; }
+        .component-home .property-view .property-list-container .property-list .property-details {
+          display: flex;
+          width: 75%; }
+          .component-home .property-view .property-list-container .property-list .property-details h5 {
+            text-align: center;
+            font-size: 1.25rem; }
+          .component-home .property-view .property-list-container .property-list .property-details p {
+            margin-top: 0.35rem;
+            font-size: 1.1rem; }
+          .component-home .property-view .property-list-container .property-list .property-details > div {
+            padding: 0.75rem;
+            border: 1px solid #4D5765; }
+          .component-home .property-view .property-list-container .property-list .property-details .property-address {
+            width: 32%; }
+          .component-home .property-view .property-list-container .property-list .property-details .property-rent {
+            width: 20%; }
+          .component-home .property-view .property-list-container .property-list .property-details .property-tenants {
+            width: 40%; }
+          .component-home .property-view .property-list-container .property-list .property-details .property-actions {
+            border: 1px solid #4D5765;
+            width: 8%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center; }
+            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action:hover {
+              cursor: pointer; }
+            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action i {
+              font-size: 1.5rem; }
+            .component-home .property-view .property-list-container .property-list .property-details .property-actions .action:first-child {
+              margin-bottom: 2rem; }
 
 .component-property-search h4,
 .component-property-search h5 {
@@ -600,3 +647,234 @@ template {
       .component-property-wizard .step5 .property-section .property-content p {
         color: #fff;
         margin-bottom: 0.5rem; }
+
+.component-jobs {
+  display: flex; }
+  .component-jobs .control-panel {
+    width: 25%;
+    border: 1px solid #4D5765;
+    color: #fff;
+    min-height: 89vh; }
+    .component-jobs .control-panel .control-panel-header {
+      display: flex;
+      border-bottom: 1px solid #4D5765;
+      padding: 1rem; }
+      .component-jobs .control-panel .control-panel-header h3 {
+        font-size: 1.75rem; }
+      .component-jobs .control-panel .control-panel-header h5 {
+        position: relative;
+        display: flex;
+        color: lightgray;
+        align-items: center;
+        position: relative;
+        position: relative;
+        top: 0.47vh;
+        margin-left: 0.5rem; }
+    .component-jobs .control-panel .controls {
+      padding: 1rem; }
+      .component-jobs .control-panel .controls .controls-link {
+        margin-bottom: 1rem;
+        font-size: 1.25rem; }
+  .component-jobs .jobs-view {
+    border: 1px solid orange;
+    width: 75%;
+    height: 89vh;
+    color: #fff; }
+    .component-jobs .jobs-view .add-job .job-order-form {
+      border: 1px solid green;
+      width: 90%;
+      margin: 0 auto; }
+      .component-jobs .jobs-view .add-job .job-order-form .form-header {
+        text-align: center;
+        border: 1px solid red;
+        padding: 1rem 0; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-header h4 {
+          font-size: 1.5rem; }
+      .component-jobs .jobs-view .add-job .job-order-form .form-body {
+        padding: 0 2rem;
+        height: 100%;
+        display: flex;
+        justify-content: space-between; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body h5 {
+          font-size: 1.25rem;
+          margin: 1% 0; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group {
+          margin-bottom: 0.5rem; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group h6 {
+            font-size: 1rem;
+            margin-bottom: 0.25rem; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .input-group input {
+            padding: 6px 2px;
+            border-radius: 5px; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body .form-right-side {
+          width: 50%; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body .form-left-side {
+          width: 45%; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          top: 10%; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description h5 {
+            text-align: center;
+            margin-bottom: 0.5rem; }
+          .component-jobs .jobs-view .add-job .job-order-form .form-body .job-description textarea {
+            height: 60%;
+            width: 100%; }
+      .component-jobs .jobs-view .add-job .job-order-form .form-footer {
+        border: 1px solid red;
+        padding: 8px 0;
+        display: flex;
+        justify-content: center; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-footer button {
+          padding: 6px 12px; }
+        .component-jobs .jobs-view .add-job .job-order-form .form-footer button:first-child {
+          margin-right: 2%; }
+    .component-jobs .jobs-view .job-queue {
+      height: 100%;
+      text-align: center; }
+      .component-jobs .jobs-view .job-queue .job-queue-header {
+        padding: 1.9% 0;
+        border-bottom: 1px solid #4D5765;
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+        justify-content: center; }
+        .component-jobs .jobs-view .job-queue .job-queue-header h4 {
+          color: #fff;
+          font-size: 1.5rem; }
+        .component-jobs .jobs-view .job-queue .job-queue-header .job-number {
+          font-size: 0.9rem;
+          position: relative;
+          bottom: 0.25vh; }
+      .component-jobs .jobs-view .job-queue .job-queue-container {
+        display: flex;
+        height: 75%;
+        flex-direction: column;
+        justify-content: space-between;
+        border: 1px solid yellow; }
+        .component-jobs .jobs-view .job-queue .job-queue-container .job {
+          display: flex;
+          border: 1px solid blue;
+          height: 15%;
+          justify-content: space-between;
+          align-items: center;
+          padding-right: 1rem;
+          color: #fff;
+          margin-bottom: 0.75rem; }
+          .component-jobs .jobs-view .job-queue .job-queue-container .job .job-house-img {
+            border: 1px solid green;
+            height: 100%;
+            width: 15%; }
+          .component-jobs .jobs-view .job-queue .job-queue-container .job .job-id {
+            font-size: 1.25rem; }
+          .component-jobs .jobs-view .job-queue .job-queue-container .job .job-date .date {
+            margin-bottom: 0.25rem; }
+          .component-jobs .jobs-view .job-queue .job-queue-container .job .job-elapsed-time {
+            font-size: 1.5rem; }
+          .component-jobs .jobs-view .job-queue .job-queue-container .job .job-controls {
+            font-size: 1.25rem; }
+      .component-jobs .jobs-view .job-queue .queue-pagination {
+        border: 1px solid orange;
+        padding: 1rem;
+        text-align: right; }
+    .component-jobs .jobs-view .completed-jobs {
+      height: 100%; }
+      .component-jobs .jobs-view .completed-jobs .job-header {
+        border: 1px solid red;
+        height: 12%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .component-jobs .jobs-view .completed-jobs .job-header h4 {
+          font-size: 1.5rem; }
+      .component-jobs .jobs-view .completed-jobs .completed-jobs-container {
+        padding: 0 1rem 1rem 1rem;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap; }
+        .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card {
+          height: 32vh;
+          border: 1px solid red;
+          width: 31%;
+          margin-top: 1rem; }
+          .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-img-header {
+            position: relative;
+            height: 100%;
+            width: 100%;
+            border: 1px solid green; }
+            .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-img-header img {
+              height: 100%;
+              width: 100%; }
+          .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-overlay {
+            position: absolute;
+            bottom: 0;
+            padding-top: 2%;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.7); }
+            .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-overlay h5 {
+              text-align: center;
+              font-size: 1.25rem;
+              margin-bottom: 0.25rem; }
+            .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-overlay p {
+              font-size: 0.8rem;
+              text-align: center; }
+            .component-jobs .jobs-view .completed-jobs .completed-jobs-container .job-card .card-overlay .card-controls {
+              display: flex;
+              width: 50%;
+              margin: 0 auto;
+              padding: 5px 0;
+              justify-content: space-between; }
+      .component-jobs .jobs-view .completed-jobs .jobs-pagination {
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 1rem; }
+        .component-jobs .jobs-view .completed-jobs .jobs-pagination button {
+          padding: 4px 10px; }
+        .component-jobs .jobs-view .completed-jobs .jobs-pagination button:first-child {
+          margin-right: 20px; }
+
+.component-transactions {
+  height: 89vh;
+  display: flex; }
+  .component-transactions .transaction-table {
+    width: 75%;
+    height: 100%;
+    border: 1px solid green; }
+    .component-transactions .transaction-table .header {
+      border-bottom: 1px solid #4D5765;
+      padding: 1rem;
+      text-align: center; }
+      .component-transactions .transaction-table .header h4 {
+        text-align: center;
+        color: #fff;
+        font-size: 1.35rem; }
+    .component-transactions .transaction-table .table-content {
+      border-collapse: collapse;
+      width: 100%; }
+      .component-transactions .transaction-table .table-content .table-header th:nth-child(2) {
+        width: 10%;
+        border: 1px solid green; }
+      .component-transactions .transaction-table .table-content .table-header th:last-child {
+        width: 5%;
+        border: 1px solid orange; }
+      .component-transactions .transaction-table .table-content .table-header th:nth-child(4) {
+        width: 35%;
+        border: 1px solid blue; }
+      .component-transactions .transaction-table .table-content .table-header th {
+        padding: 0.5rem;
+        font-size: 1.25rem;
+        color: #fff; }
+      .component-transactions .transaction-table .table-content .table-body tr td {
+        padding: 0.5rem 0;
+        text-align: center;
+        color: #fff;
+        font-size: 1rem; }
+      .component-transactions .transaction-table .table-content .table-body tr td:not(:nth-child(4)) {
+        border: 1px solid red; }
+      .component-transactions .transaction-table .table-content .table-body tr td:nth-child(4) {
+        border: 1px solid blue; }
+  .component-transactions .transaction-viewer {
+    width: 25%;
+    border: 1px solid orange;
+    height: 100%; }
