--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -2,6 +2,7 @@
     background-color: #344055;
     height: 100vh;
     .nav {
+        display: flex;
         align-items: center;
         background-color: $btn-blue;
         align-items: center;
